2008-01-17  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/community.c (igraph_community_leading_eigenvector) : rewritten
	* examples/simple/igraph_community_leading_eigenvector.c : updated

	* src/arpack.c (igraph_arpack_options_init) : maxiter default is 3000

2008-01-16  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/foreign.c (igraph_read_graph_gml) : GML graphs are now
	considered directed iff they contain a graph attribute
	called 'directed' with value 1 (conforms with the tech
	report but contradicts the draft specification)
	
	* src/centrality.c (igraph_closeness_estimate,
	igraph_betweenness_estimate) : adjacency list views are
	used from now on
	
	* src/structural_properties.c (igraph_shortest_paths) :
	adjacency lists views are used from now on

2008-01-15  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/community.c (igraph_community_leading_eigenvector_naive) : 
	no real changes, just cosmetics
	* src/arpack.c (igraph_arpack_rssolve) : query eigenvector if 
	storage option is given

2008-01-13  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/igraph.h (igraph_i_lazy_adjlist_t, igraph_lazy_adjlist_t)
	(igraph_i_lazy_adjedgelist_t, igraph_lazy_adjedgelist_t) : renamed
	* src/community.c
	* src/revolver_grow.c
	* src/adjlist.c
	* src/topology.c
	* src/structural_properties.c
	* src/cocitation.c : updated

2008-01-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/topology.c (igraph_isomorphic) : rewritten
	
	* src/topology.c (igraph_isomorphic_34) : added
	(igraph_subisomorphic) : added

	* src/topology.c (igraph_isoclass, igraph_isoclass_subgraph) :
	use igraph_integer_t instead of int
	* examples/simple/topology.c : updated

2008-01-05  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/bliss.cc (igraph_canonical_permutation) : 'sh' and 'info'
	arguments added
	(igraph_automorphisms) : use 'info' instead if 'no', 'sh' added
	* src/bliss_bignum.hh (Bignum::tostring) : added
	* src/topology.c (igraph_isomorphic_bliss) : 'sh1', 'sh2', 
	'info1', 'info2' arguments added
