@@ -1,3 +1,12 @@
+2008-01-18  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* src/community.c (igraph_community_leading_eigenvector_naive)
+	(igraph_community_leading_eigenvector) : warning if mxiter iterations
+	reached
+
+	* src/arpack.c (igraph_arpack_rssolve, igraph_arpack_rnsolve) :
+	set output options
+
 2008-01-17  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* src/community.c (igraph_community_leading_eigenvector) : rewritten
